--- a/analyses/angular/index.html
+++ b/analyses/angular/index.html
@@ -2,27 +2,9 @@
 
 
 {% block head %}
+<link rel="stylesheet" href="/_static/databench.css?v={{ databench_version }}">
 <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
-<style>
-.nav {
-    display: block;
-    width: 100%;
-    float: left;
-}
-.nav-pills li {
-    display: block;
-    padding: 5px 20px;
-    border: 1px solid #55a;
-    border-bottom: 0;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    float: left;
-    margin-left: 5px;
-}
-.nav-pills li.active {
-    border-top: 3px solid #55a;
-}
-</style>
+<link rel="stylesheet" href="/angular/static/analysis.css?v={{ version }}">
 {% end %}
 
 
@@ -32,7 +14,6 @@
     <ul class="nav nav-pills">
         <li ng-class="{active: navCheck('home')}"><a href='#/home'>Home</a></li>
         <li ng-class="{active: navCheck('simplepi')}"><a href='#/simplepi'>Simple π</a></li>
-        <li ng-class="{active: navCheck('logmessages')}"><a href='#/logmessages'>Log Messages</a></li>
     </ul>
 
     <div ng-show="navCheck('home')" ng-controller="testingAngular">
@@ -74,44 +55,15 @@
         inside the first quadrant of the unit circle.</p>
     </div>
 
-    <div ng-show="navCheck('logmessages')">
-        <h1>Log Messages</h1>
-        <pre id="log"></pre>
-    </div>
-
 </div>
 </div>
 {% end %}
 
 
 {% block footer %}
+<script src="/_static/databench.js?v={{ databench_version }}"></script>
 <script src="/angular/static/angular_1.2.15.min.js"></script>
-<script>
-    var databench = new Databench.Connection();
-    Databench.ui.wire(databench);
-
-    angular.module('angularApp', [])
-    .controller('navCtrl', ['$scope', '$location', function ($scope, $location) {
-        $scope.navCheck = function (page) {
-            var currentRoute = $location.path().substring(1) || 'home';
-            return page === currentRoute;
-        };
-    }])
-    .controller('testingAngular', ['$scope', function($scope) {
-        $scope.chapter = 'modify me';
-    }])
-    .controller('simplepi', ['$scope', function($scope) {
-        $scope.pi = '0.0 ± 1.0';
-
-
-        databench.on({data: 'pi'}, function(pi) {
-            $scope.pi = pi.estimate.toFixed(3)+' ± '+pi.uncertainty.toFixed(3);
-            $scope.$apply();
-        });
-    }]);
-
-    databench.connect();
-</script>
+<script src="/angular/static/analysis.js"></script>
 {% end %}
 
 
