--- a/analyses/fastpi/index.html
+++ b/analyses/fastpi/index.html
@@ -2,25 +2,19 @@
 
 
 {% block head %}
+<link rel="stylesheet" href="/_static/databench.css?version={{ databench_version }}">
 <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
 {% end %}
 
 
 {% block analysis %}
-<h1><i>π = <span id="pi">0.0 ± 1.0</span></i></h1>
+<h1><em>π = <span id="pi">0.0 ± 1.0</span></em></h1>
 <label for="workers">Workers</label>
-<input type="range" name="workers" min="1" max="24" value="2" />
+<input type="range" id="workers" min="1" max="24" value="2" />
 {% end %}
 
 
 {% block footer %}
-<script>
-    var d = new Databench.Connection();
-    Databench.ui.wire(d);
-    d.connect();
-
-    d.on({data: 'pi'}, function(pi) {
-        document.getElementById('pi').innerHTML = pi.estimate.toFixed(3)+' ± '+pi.uncertainty.toFixed(3);
-    });
-</script>
+<script src="/_static/databench.js?v={{ databench_version }}"></script>
+<script src="/fastpi/static/analysis.js?v={{ version }}"></script>
 {% end %}
