--- a/analyses/mplpi/index.html
+++ b/analyses/mplpi/index.html
@@ -2,6 +2,7 @@
 
 
 {% block head %}
+<link rel="stylesheet" href="/_static/databench.css?version={{ databench_version }}">
 <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
 {% end %}
 
@@ -13,14 +14,6 @@
 
 
 {% block footer %}
-<script>
-    var d = new Databench.Connection();
-    Databench.ui.wire(d);
-
-    d.on({data: 'pi'}, function(pi) {
-        document.getElementById('pi').innerHTML = pi.estimate.toFixed(3)+' ± '+pi.uncertainty.toFixed(3);
-    });
-
-    d.connect();
-</script>
+<script src="/_static/databench.js?v={{ databench_version }}"></script>
+<script src="/mplpi/static/analysis.js?v={{ version }}"></script>
 {% end %}
