validate angular attributes ok

--- a/analyses/mplpi/index.html
+++ b/analyses/mplpi/index.html
@@ -9,7 +9,7 @@
 
 {% block analysis %}
 <h1><i>π = <span id="pi">0.0 ± 1.0</span></i></h1>
-<img alt="matplotlib output" data-signal="mpl" style="max-width: 100%" />
+<img alt="matplotlib output" data-signal="mpl" style="max-width: 100%" src="/_static/logo.svg" />
 {% end %}
 
 
