--- a/analyses/helloreact/index.html
+++ b/analyses/helloreact/index.html
@@ -15,6 +15,8 @@
 
 {% block footer %}
 <script src="/_static/databench.js?v={{ databench_version }}"></script>
+<script src="/node_modules/react/dist/react.min.js"></script>
+<script src="/node_modules/react-dom/dist/react-dom.min.js"></script>
 <script src="/helloreact/static/bundle.js?v={{ version }}"></script>
 {% end %}
 
