--- a/analyses/flowers/index.html
+++ b/analyses/flowers/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?version={{ databench_version }}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
 <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css" />
 <style>
 .sliders { display: flex; flex-wrap: wrap; margin: -10px 0 0 -10px; }
@@ -38,7 +38,7 @@
 
 
 {% block footer %}
-<script src="/_static/databench.js?v={{ databench_version }}"></script>
-<script src="/node_modules/d3/d3.min.js?v={{ version }}"></script>
-<script src="/flowers/static/analysis.js?v={{ version }}"></script>
+<script src="/_static/databench.js?v={{databench_version}}"></script>
+<script src="/node_modules/d3/d3.min.js?v={{version}}"></script>
+<script src="/flowers/static/analysis.js?v={{version}}"></script>
 {% end %}
