--- a/analyses/mplpi/index.html
+++ b/analyses/mplpi/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?version={{ databench_version }}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
 <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
 {% end %}
 
@@ -14,6 +14,6 @@
 
 
 {% block footer %}
-<script src="/_static/databench.js?v={{ databench_version }}"></script>
-<script src="/mplpi/static/analysis.js?v={{ version }}"></script>
+<script src="/_static/databench.js?v={{databench_version}}"></script>
+<script src="/mplpi/static/analysis.js?v={{version}}"></script>
 {% end %}
