--- a/analyses/redispub/index.html
+++ b/analyses/redispub/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?version={{ databench_version }}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
 <style>
 #genValue, #recValue {
     font-size:600%; color:#008;
@@ -21,6 +21,6 @@
 
 
 {% block footer %}
-<script src="/_static/databench.js?v={{ databench_version }}"></script>
-<script src="/redispub/static/analysis.js?v={{ version }}"></script>
+<script src="/_static/databench.js?v={{databench_version}}"></script>
+<script src="/redispub/static/analysis.js?v={{version}}"></script>
 {% end %}
