--- a/analyses/helloreact/index.html
+++ b/analyses/helloreact/index.html
@@ -2,8 +2,8 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?version={{ databench_version }}">
-<link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css?v={{ version }}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
+<link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css?v={{version}}">
 {% end %}
 
 
@@ -14,5 +14,5 @@
 
 
 {% block footer %}
-<script src="/helloreact/static/bundle.js?v={{ version }}"></script>
+<script src="/helloreact/static/bundle.js?v={{version}}"></script>
 {% end %}
