--- a/analyses/reactandtypescript/index.html
+++ b/analyses/reactandtypescript/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?version={{ databench_version }}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
 {% end %}
 
 
@@ -12,5 +12,5 @@
 
 
 {% block footer %}
-<script src="/reactandtypescript/static/bundle.js?v={{ version }}"></script>
+<script src="/reactandtypescript/static/bundle.js?v={{version}}"></script>
 {% end %}
