update to new style

--- a/analyses/bagofcharsd3/index.html
+++ b/analyses/bagofcharsd3/index.html
@@ -9,10 +9,7 @@
 
 
 {% block analysis %}
-<input type="text" class="form-control" id="sentence"
-       placeholder="type a phrase"
-       autocomplete="off" autofocus />
-
+<input type="text" class="form-control" id="sentence" autocomplete="off" autofocus />
 <svg id="viz"></svg>
 {% end %}
 
