html valid fixes

--- a/analyses/bagofcharsd3/index.html
+++ b/analyses/bagofcharsd3/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}" />
 <link rel="stylesheet" href="/static/font-awesome.min.css?v={{version}}" />
 <link rel="stylesheet" href="/bagofcharsd3/static/analysis.css?v={{version}}" />
 {% end %}
