--- a/analyses/flowers/index.html
+++ b/analyses/flowers/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}" />
 <link rel="stylesheet" href="/static/font-awesome.min.css?v={{version}}" />
 <style>
 .sliders { display: flex; flex-wrap: wrap; margin: -10px 0 0 -10px; }
