--- a/analyses/redissub/index.html
+++ b/analyses/redissub/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}" />
 <style>
 .recValue {
 	font-size:300%; color:#008;
