--- a/analyses/angular/index.html
+++ b/analyses/angular/index.html
@@ -2,9 +2,9 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
-<link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="/angular/static/analysis.css?v={{version}}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}" />
+<link rel="stylesheet" href="/static/font-awesome.min.css?v={{version}}" />
+<link rel="stylesheet" href="/angular/static/analysis.css?v={{version}}" />
 {% end %}
 
 
