--- a/analyses/redispub/index.html
+++ b/analyses/redispub/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}" />
 <style>
 #genValue, #recValue {
     font-size:600%; color:#008;
