--- a/analyses/simplepi/index.html
+++ b/analyses/simplepi/index.html
@@ -2,8 +2,8 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}">
-<link rel="stylesheet" href="/static/font-awesome.min.css?v={{version}}">
+<link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}" />
+<link rel="stylesheet" href="/static/font-awesome.min.css?v={{version}}" />
 {% end %}
 
 
