update static links

--- a/analyses/angular/index.html
+++ b/analyses/angular/index.html
@@ -4,7 +4,7 @@
 {% block head %}
 <link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}" />
 <link rel="stylesheet" href="/static/font-awesome.min.css?v={{version}}" />
-<link rel="stylesheet" href="/angular/static/analysis.css?v={{version}}" />
+<link rel="stylesheet" href="/angular/analysis.css?v={{version}}" />
 {% end %}
 
 
@@ -62,8 +62,8 @@
 
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
-<script src="/angular/static/angular_1.2.15.min.js"></script>
-<script src="/angular/static/analysis.js"></script>
+<script src="/static/angular_1.2.15.min.js"></script>
+<script src="/angular/analysis.js?v={{version}}"></script>
 {% end %}
 
 
