--- a/analyses/fastpi/index.html
+++ b/analyses/fastpi/index.html
@@ -16,5 +16,5 @@
 
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
-<script src="/fastpi/static/analysis.js?v={{version}}"></script>
+<script src="/fastpi/analysis.js?v={{version}}"></script>
 {% end %}
