--- a/analyses/flowers/index.html
+++ b/analyses/flowers/index.html
@@ -40,5 +40,5 @@
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
 <script src="/static/d3.min.js?v={{version}}"></script>
-<script src="/flowers/static/analysis.js?v={{version}}"></script>
+<script src="/flowers/analysis.js?v={{version}}"></script>
 {% end %}
