--- a/analyses/helloreact/index.html
+++ b/analyses/helloreact/index.html
@@ -14,5 +14,5 @@
 
 
 {% block footer %}
-<script src="/helloreact/static/bundle.js?v={{version}}"></script>
+<script src="/helloreact/analysis.js?v={{version}}"></script>
 {% end %}
