--- a/analyses/helloworld/index.html
+++ b/analyses/helloworld/index.html
@@ -13,5 +13,5 @@
 
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
-<script src="/helloworld/static/analysis.js?v={{version}}"></script>
+<script src="/helloworld/analysis.js?v={{version}}"></script>
 {% end %}
