--- a/analyses/mplpi/index.html
+++ b/analyses/mplpi/index.html
@@ -15,5 +15,5 @@
 
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
-<script src="/mplpi/static/analysis.js?v={{version}}"></script>
+<script src="/mplpi/analysis.js?v={{version}}"></script>
 {% end %}
