--- a/analyses/redispub/index.html
+++ b/analyses/redispub/index.html
@@ -22,5 +22,5 @@
 
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
-<script src="/redispub/static/analysis.js?v={{version}}"></script>
+<script src="/redispub/analysis.js?v={{version}}"></script>
 {% end %}
