--- a/analyses/redissub/index.html
+++ b/analyses/redissub/index.html
@@ -19,5 +19,5 @@
 
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
-<script src="/redissub/static/analysis.js?v={{version}}"></script>
+<script src="/redissub/analysis.js?v={{version}}"></script>
 {% end %}
