--- a/analyses/bagofcharsd3/index.html
+++ b/analyses/bagofcharsd3/index.html
@@ -4,7 +4,7 @@
 {% block head %}
 <link rel="stylesheet" href="/_static/databench.css?v={{databench_version}}" />
 <link rel="stylesheet" href="/static/font-awesome.min.css?v={{version}}" />
-<link rel="stylesheet" href="/bagofcharsd3/static/analysis.css?v={{version}}" />
+<link rel="stylesheet" href="/bagofcharsd3/analysis.css?v={{version}}" />
 {% end %}
 
 
@@ -18,5 +18,5 @@
 <script src="/_static/databench.js?v={{databench_version}}"></script>
 <script src="/static/d3.min.js?v={{version}}"></script>
 <script src="/bagofcharsd3/static/d3charcount.js?v={{version}}"></script>
-<script src="/bagofcharsd3/static/analysis.js?v={{version}}"></script>
+<script src="/bagofcharsd3/analysis.js?v={{version}}"></script>
 {% end %}
