--- a/analyses/simplepi/index.html
+++ b/analyses/simplepi/index.html
@@ -14,5 +14,5 @@
 
 {% block footer %}
 <script src="/_static/databench.js?v={{databench_version}}"></script>
-<script src="/simplepi/static/analysis.js?v={{version}}"></script>
+<script src="/simplepi/analysis.js?v={{version}}"></script>
 {% end %}
