fix another one

--- a/analyses/helloworld/notemplate.html
+++ b/analyses/helloworld/notemplate.html
@@ -5,6 +5,6 @@
     <p id="output"></p>
 
     <script src="/_static/databench.js?v={{databench_version}}"></script>
-    <script src="/helloworld/static/analysis.js?v={{version}}"></script>
+    <script src="/helloworld/analysis.js?v={{version}}"></script>
 </body>
 </html>
